[S09P22B305-246] test : youtube load test

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,6 +27,7 @@
     -->
     <title>GOGO SING</title>
     <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="https://www.youtube.com/embed" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
